# Kunjika-cpp

./: .gitignore  CMakeLists.txt  README.md  config.json.sample  kunjika-cpp.project  trim_trailing_space.sh
include/: base64.h  config.h  couchbase_pool.h  globals.h  home.h  kunjika.h  login.h  registration.h
js/: ganalytics.js
src/: base64.cpp  config.cpp  couchbase_pool.cpp  globals.cpp  kunjika.cpp  login.cpp  main.cpp  registration.cpp
templates/: index.html  login.html
